all-card create-answer

--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
                   role="navigation"
                   aria-label="navigation"
                >
-                  <a href="/create-imagery.html" class="btn btn-secondary">
-                     Create new </a>
-                  </button>
-                  <button
-                     type="button"
-                     class="btn btn-secondary tab-active tab-separator"
-                  >
-                     Review
-                  </button>
-                  <button type="button" class="btn btn-secondary tab-separator">
+               <a href="/create-answer.html" class="btn btn-secondary">
+                Create new
+                </a>
+                <a href="/index.html"
+                  
+                class="btn btn-secondary tab-separator tab-active">
+                Review
+               </a>
+                  <a href="/all-cards.html" class="btn btn-secondary tab-separator">
                      All cards
-                  </button>
+                  </a>
                </div>
                <div class="card">
                   <div class="card-body bg-primary lead">
