--- a/create-answer.html
+++ b/create-answer.html
@@ -19,7 +19,7 @@
             >
                <img src="icons/logo-app.svg" width="32px" />
                <h3 class="d-inline text-brand text-dark">White Bear</h3>
-               <button class="btn btn-link float-right">Log out</button>
+               <a href="/index.html" class="btn btn-link float-right">Log out</a>
                <div class="clearfix"></div>
                <div
                   class="btn-group d-flex mt-1 my-2"
@@ -30,7 +30,7 @@
                      Create new
                      
                   </button>
-                  <a href="/index.html"
+                  <a href="review-imagery.html"
                   
                   class="btn btn-secondary tab-separator">
                   Review
