Edit card and index

--- a/create-imagery.html
+++ b/create-imagery.html
@@ -33,7 +33,7 @@
                   role="navigation"
                   aria-label="navigation"
                >
-                  <a href="/create-imagery.html" class="btn tab-active btn-secondary">
+                  <a href="/create-answer.html" class="btn tab-active btn-secondary">
                      Create new
                      
                   </a>
