--- a/review-answer.html
+++ b/review-answer.html
@@ -50,7 +50,7 @@
                   </div>
                </div>
 
-               <a href="edit.html" class="btn btn-link">Edit Card</a>
+               <a href="edit.html" class="btn btn-link">Edit</a>
                <div class="float-right">
                <a href="/review-empty.html" class="btn btn-outline-primary">Needs work</a>
                <a href="review-empty.html" class="btn btn-primary ml-4">
