Updated index size responsive- cleaning up code

--- a/edit.html
+++ b/edit.html
@@ -75,28 +75,28 @@
                   Card properties
                </p>
                <div class="row">
-                  <div class="col-3">
+                  <div class="col-3 mt-2">
                      <p class="text-muted">Created on:</p>
                   </div>
-                  <div class="col-9">
+                  <div class="col-9 mt-2">
                      <p>Dec.24, 2019</p>
                   </div>
-                  <div class="col-3">
+                  <div class="col-3 mt-2">
                      <p class="text-muted">Last attempt:</p>
                   </div>
-                  <div class="col-9">
+                  <div class="col-9 mt-2">
                      <p>Dec.31, 2019</p>
                   </div>
-                  <div class="col-3">
+                  <div class="col-3 mt-2">
                      <p class="text-muted">Next attempt:</p>
                   </div>
-                  <div class="col-9">
+                  <div class="col-9 mt-2">
                      <p>July. 14, 2020</p>
                   </div>
-                  <div class="col-3">
+                  <div class="col-3 mt-2">
                      <p class="text-muted">Consecutives:</p>
                   </div>
-                  <div class="col-9">
+                  <div class="col-9 mt-2">
                      <p>4</p>
                   </div>
                </div>
@@ -113,7 +113,7 @@
                      </label>
                   </div>
 
-                  <div class="mt-4">
+                  <div class="mt-4 mb-3">
                      <button
                         class="btn btn-outline-danger d-none"
                         id="delete-button"
