--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
          <div class="row">
             <div class="col-12 ml-6 mt-6">
                <img src="/images/logo-landing.png" />
-               <h1 class="d-inline text-brand ml-3">White Bear</h1>
+               <h1 class="d-inline text-brand ml-3 mb-n1">White Bear</h1>
             </div>
          </div>
          <!-- this is the nice to meet you card-->
          <div class="row">
-            <div class="col-6">
-               <div class="card card-body-cover ml-9 mt-9">
+            <div class="col-12 col-lg-5">
+               <div
+                  class="card card-body-cover mt-9 d-flex justify-content-center"
+               >
                   <h2>Nice to meet you</h2>
                   <p>Sign up for White Bear. Free forever.</p>
                   <button
@@ -62,8 +64,10 @@
 
             <!-- this is the welcome back card-->
 
-            <div class="col-6">
-               <div class="card card-body-cover ml-9 mt-9" ">
+            <div class="col-12 col-lg-5">
+               <div
+                  class="card card-body-cover mt-9 d-flex justify-content-center"
+               >
                   <h2>Welcome back</h2>
                   <p class="mt-3">
                      Log in with your email address and password.
