--- a/all-cards.html
+++ b/all-cards.html
@@ -54,7 +54,7 @@
                  <p class="text-muted mt-2">Sort cards by</p>
                 </div>
                 <div class="col-8">
-                <select class="form-control form-conrol-small">
+                <select class="form-control form-control-sm">
                     <option>Most recent</option>
                     <option>Oldest</option>
                     <option>Hardest</option>
