--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
       <div class="container">
          <div class="row">
             <div class="col-12 ml-6 mt-6">
-               <img src="/images/logo-landing.png" />
-               <h1 class="d-inline text-brand ml-3 mb-n1">White Bear</h1>
+               <img src="/images/logo-landing.png" class="mt-n5" />
+               <h1 class="d-inline text-brand ml-3 mt-4">White Bear</h1>
             </div>
          </div>
          <!-- this is the nice to meet you card-->
          <div class="row">
             <div class="col-12 col-lg-5">
                <div
-                  class="card card-body-cover mt-9 d-flex justify-content-center"
+                  class="card card-body-padding mt-9 d-flex justify-content-center"
                >
                   <h2>Nice to meet you</h2>
                   <p>Sign up for White Bear. Free forever.</p>
                   <button
-                     class="btn btn-success btn-block d-flex justify-content-center sign-up mt-5"
+                     class="btn btn-success btn-block d-flex justify-content-center mt-5"
+                     id="sign-up-button"
                   >
                      Sign up
                   </button>
-                  <div class="email" style="display: none">
-                     <p class="text-success mt-3 email" style="display: none">
-                        Let's get you signed up
-                     </p>
+                  <div id="sign-up-card" style="display: none">
+                     <p class="text-success mt-3">Let's get you signed up</p>
 
                      <p class="text-muted mt-3 lead">Email address</p>
 
@@ -66,7 +65,7 @@
 
             <div class="col-12 col-lg-5">
                <div
-                  class="card card-body-cover mt-9 d-flex justify-content-center"
+                  class="card card-body-padding mt-9 d-flex justify-content-center"
                >
                   <h2>Welcome back</h2>
                   <p class="mt-3">
