added counter red and disable button  add imagery and answer

--- a/create-imagery.html
+++ b/create-imagery.html
@@ -66,7 +66,7 @@
                </div>
 
 
-                        <p class="float-right mt-2 mb-5 text-muted"><span id="imagery-char-count">0</span>/240</p>
+                        <p class="float-right mt-2 mb-5 text-muted" id="char-count"><span id="imagery-char-count">0</span>/240</p>
                         <div class="clearfix"></div>
 
 
@@ -74,7 +74,7 @@
 
                <button class="btn btn-link" id="back-card">Back to answer</button>
            
-               <button class="btn btn-primary btn-lg ml-4 float-right" id="save-card">
+               <button class="btn btn-primary btn-lg ml-4 float-right" disabled="true" id="save-card">
                    <img src="icons/save.svg" 
                    width="20px" 
                    style="margin-bottom: 3px; margin-right: 4px"/>
