--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                   >
                      Sign up
                   </button>
-                  <div id="sign-up-card" style="display: none">
+                  <!-- change style to "display= none" to make the sign up buttom display the email address and password -->
+                  <div id="sign-up-card" style="">
                      <p class="text-success mt-3">Let's get you signed up</p>
 
                      <p class="text-muted mt-3 lead">Email address</p>
