--- a/edit.html
+++ b/edit.html
@@ -75,9 +75,8 @@
                <div class="float-right">
                   <button
                      href="all-cards.html"
-                     id="save-card"
-                     disabled="true"
-                     class="btn btn-primary ml-4"
+                     id="edit-save-card"
+                     class="btn btn-primary ml-4 disabled"
                   >
                      <img
                         src="icons/save.svg"
