updated email address and password waypoint 04

--- a/index.html
+++ b/index.html
@@ -64,13 +64,20 @@
                      <p class="text-danger lead mt-2 d-none" id="enterPassword">
                         Please create a password.
                      </p>
+                     <p
+                        class="text-danger lead mt-2 d-none"
+                        id="differentPassword"
+                     >
+                        All or part of your email address cannot be used in your
+                        password.
+                     </p>
 
                      <button
                         class="btn btn-success btn-block mt-5"
                         id="letsGoButton"
                      >
                         Let's go!
-                  </button>
+                     </button>
                   </div>
                </div>
             </div>
