--- a/create-imagery.html
+++ b/create-imagery.html
@@ -87,4 +87,5 @@
       defer
       ></script>
       <script src="/script.js" defer></script>
+      <script src="/mostInsecurePasswords.js" defer></script>
 </html>
