up to video 126A

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                            aria-describedby="inputGroup-sizing-default"
                         />
                      </div>
-                     <p class="text-danger lead mt-2 d-none" id="enterEmail">
-                        Please enter your email address.
-                     </p>
+                     <p
+                        class="text-danger lead mt-2 d-none"
+                        id="email-error"
+                     ></p>
                      <p class="text-muted mt-3 lead">Create a password</p>
 
                      <div class="input-group mb-3 mt-2">
@@ -62,19 +63,6 @@
                         class="lead d-none mt-2 text-danger"
                         id="password-error"
                      ></p>
-                     <!-- <p class="text-danger lead mt-2 d-none" id="passwordLenth">
-                        Your password must be at least 9 characters.
-                     </p>
-                     <p class="text-danger lead mt-2 d-none" id="enterPassword">
-                        Please create a password.
-                     </p>
-                     <p
-                        class="text-danger lead mt-2 d-none"
-                        id="differentPassword"
-                     >
-                        All or part of your email address cannot be used in your
-                        password.
-                     </p> -->
 
                      <button
                         class="btn btn-success btn-block mt-5"
@@ -132,4 +120,5 @@
    ></script>
    <script src="/script.js" defer></script>
    <script src="/mostInsecurePasswords.js" defer></script>
+   <script src="/secondMostInsecurePasswords.js" defer></script>
 </html>
