--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
       defer
    ></script>
+   <script src="/allInsecurePasswords.js" defer></script>
    <script src="/mostInsecurePasswords.js" defer></script>
    <script src="/secondMostInsecurePasswords.js" defer></script>
    <script src="/getPasswordError.js" defer></script>
