--- a/create-imagery.html
+++ b/create-imagery.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>White Bear</title>
       <link href="/style/dist.css" rel="stylesheet" />
-   </head>
+  </head>
    <body>
     <div class="bg-success w=100 lead d-none justify-content-center fixed-top"
     id ="overlay-success">
@@ -81,8 +81,9 @@
                    Save</button>
             
            
-         </div>
+             </div>
       </div>
+   </body>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" 
       defer
       ></script>
